--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,18 @@
-<html>
-    <head>
-        <title>Emmett's Blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Emmett's Blog</a></h1>
-        </div>
+{% extends 'home/base.html' %}
 
-		{% for post in posts %}
-	        <div>
-	            <p>published: 14.06.2014, 12:14</p>
-	            <h2><a href="">{{ post.title }}</a></h2>
-	            <p>{{ post.text|linebreaksbr }}
-	        </div>
-        {% endfor %}
-    </body>
-</html>
+{% block content %}
+	<h1 class="title">
+    Emmett's Blog
+    </h1>
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+				{{ post.published_date }}
+			</div>
+			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaksbr }}</p>
+		</div>
+	{% endfor %}
+{% endblock %}
+
+<!-- % url 'post_detail' pk=post.pk % GOES TO blog.views.post_detail -->
