--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,53 +1,26 @@
-{% load staticfiles %}
+{% extends 'home/base.html' %}
 
-<html>
-    <head>
-        <title>Homepage</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
-
-    <nav>
-    	<ul id="nav">
-    		<li><a href="">Home</a></li>
-			<li><a href="polls">Polls</a></li>
-			<li><a href="news">CV</a></li>
-			<li><a href="contact.asp">Food Blog</a></li>
-			<li><a href="about.asp">About</a></li>
-		</ul>
-    </nav>
-
-
-    <body>
-    	<section class='background'>
-    		<section class='main_container'>
-		        <div>
-		            <h1 class="title">
-		            Emmetts Home Page
-		            </h1>
-		            <p>
-		            Jean shorts tote bag chartreuse twee. Actually tacos kickstarter, flexitarian before they sold out banh mi chicharrones disrupt offal green juice roof party. Swag pitchfork seitan, forage retro next level kogi truffaut synth etsy church-key crucifix. Deep v pabst semiotics, farm-to-table PBR&B shoreditch health goth keytar mustache scenester. Tofu irony pour-over four loko, actually bicycle rights whatever jean shorts beard pabst. Intelligentsia umami disrupt, migas vinyl drinking vinegar plaid shabby chic selfies 8-bit pug schlitz fixie trust fund. Deep v shoreditch roof party, crucifix thundercats craft beer yr squid ugh franzen irony godard aesthetic.
-		            </p>
-		        </div>
-		        <div>
-		            <h1 class="title">
-		            BlahBlah
-		            </h1>
-		            <p>
-		            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-		            </p>
-		            <p>
-		            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-		            </p>
-		            <p>
-		            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-		            </p>
-		        </div>
-		    </section>
-        </section>
-    </body>
-</html>
-
-            <!-- <h1><a href="">BlahBlah</a></h1> -->
+{% block content %}
+	<div>
+	    <h1 class="title">
+	    Emmetts Home Page
+	    </h1>
+	    <p>
+	    Jean shorts tote bag chartreuse twee. Actually tacos kickstarter, flexitarian before they sold out banh mi chicharrones disrupt offal green juice roof party. Swag pitchfork seitan, forage retro next level kogi truffaut synth etsy church-key crucifix. Deep v pabst semiotics, farm-to-table PBR&B shoreditch health goth keytar mustache scenester. Tofu irony pour-over four loko, actually bicycle rights whatever jean shorts beard pabst. Intelligentsia umami disrupt, migas vinyl drinking vinegar plaid shabby chic selfies 8-bit pug schlitz fixie trust fund. Deep v shoreditch roof party, crucifix thundercats craft beer yr squid ugh franzen irony godard aesthetic.
+	    </p>
+	</div>
+	<div>
+	    <h1 class="title">
+	    BlahBlah
+	    </h1>
+	    <p>
+	    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+	    </p>
+	    <p>
+	    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+	    </p>
+	    <p>
+	    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+	    </p>
+	</div>
+{% endblock %}
