--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,46 +1,21 @@
-{% load staticfiles %}
+{% extends 'home/base.html' %}
 
-<html>
-    <head>
-        <title>Homepage</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
-
-    <nav>
-    	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="/polls/">Polls</a></li>
-		<li><a href="news">CV</a></li>
-		<li><a href="contact.asp">Food Blog</a></li>
-		<li><a href="about.asp">About</a></li>
-		</ul>
-    </nav>
-
-
-    <body>
-    	<section class='background'>
-    		<section class='main_container'>
-		        <div>
-		            <h1 class="title">
-		            Polls
-		            </h1>
-					<h2>
-					{{ question.question_text }}
-					</h2>
-		            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-					<form action="{% url 'polls:vote' question.id %}" method="post">
-					{% csrf_token %}
-					{% for choice in question.choice_set.all %}
-					    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-					    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
-					{% endfor %}
-					<input type="submit" value="Vote" />
-					</form>
-		        </div>
-		    </section>
-        </section>
-    </body>
-</html>
+{% block content %}
+	<div>
+	    <h1 class="title">
+	    Polls
+	    </h1>
+		<h2>
+		{{ question.question_text }}
+		</h2>
+	    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+		<form action="{% url 'polls:vote' question.id %}" method="post">
+		{% csrf_token %}
+		{% for choice in question.choice_set.all %}
+		    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+		    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
+		{% endfor %}
+		<input type="submit" value="Vote" />
+		</form>
+	</div>
+{% endblock %}
