--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,12 +4,17 @@
 	<h1 class="title">
     Emmett's Blog
     </h1>
+    {% if user.is_authenticated %}
+    <h2>
+	    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    </h2>
+    {% endif %}
 	{% for post in posts %}
 		<div class="post">
 			<div class="date">
 				{{ post.published_date }}
 			</div>
-			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+			<h1><a href="{% url 'post_specific' pk=post.pk %}">{{ post.title }}</a></h1>
 			<p>{{ post.text|linebreaksbr }}</p>
 		</div>
 	{% endfor %}
