--- a/blog/templates/blog/post_specific.html
+++ b/blog/templates/blog/post_specific.html
@@ -4,11 +4,14 @@
 	<h1 class="title">
     Emmetts Blog
     </h1>
-    <div class="post">
+    <div>
         {% if post.published_date %} <!-- If it has a published date -->
-            <div class="date">
+            <div>
                 {{ post.published_date }}
             </div>
+        {% endif %}
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
