--- a/polls/templates/polls/create.html
+++ b/polls/templates/polls/create.html
@@ -1,30 +1,12 @@
 {% extends 'home/base.html' %}
 
 {% block content %}
-    <div>
-        <h1 class="title">
-        Polls
-        </h1>
-        <p class="text-center">
-        This is the homepage for creating or viewing polls. Navigate the newest polls on the left, or create a poll using the create button on the right.
-        </p>
-        <form>
-            <br>
-            <div class="input_question_title">
-                <input type="text" placeholder="Type your question in here" name="input_question">
-            </div>
-            <br><br>
-            <br><br>
-            <input type="text" placeholder="Enter Poll Option 1" name="input_answer1">
-            <br><br>
-            <input type="text" placeholder="Enter Poll Option 2" name="input_answer2">
-            <br><br>
-            <input type="text" placeholder="Enter Poll Option 3" name="input_answe3"><br>
-        </form>
-        <div style="text-align:center;">
-            <a class="create_poll_button" href="{% url 'polls:create' %}">
-            Create Poll!
-            </a>
-        </div>
-    </div>
+    <h1 class='title'>New post</h1>
+    <form method="POST" class="post-form">{% csrf_token %}
+        {{ Qform.as_p }}
+        {% for x in Cform %}
+		    {{ x.as_p }}
+		{% endfor%}
+        <button type="submit" class="save btn btn-default">Save</button>
+    </form>
 {% endblock %}
