--- a/blog/templates/blog/test.html
+++ b/blog/templates/blog/test.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% if user.is_authenticated %}
     <h2 class="new-post">
-        <a href="{% url 'post_new' %}">
+        <a href="#">
             Create new post
         </a>
     </h2>
