added a bar onto homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,8 @@
 {% extends 'home/base.html' %}
 
 {% block content %}
+	<div id="bar">
+        </div>
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-3">
 			<h1 class="title text-center">
