--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -56,8 +56,12 @@ header {
 	font-size: 16px;
 }
 
+/*~~~~ HOME PAGE ~~~~*/
+.title {
+	padding: 20px 0;
+}
 /*~~~~ BLOG POSTS ~~~~*/
-.new-post {
+.new-post, #bar {
 	margin: 0;
 	padding: 0;
 	height: 22px;
