Added blog navigation + styled it

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -28,5 +28,16 @@
                 </h2>
             </div>
         </article>
+        <ul id="blog-navigation">
+            <li><p id="page-number">
+                Page 1 of 1
+            </p></li>
+            <li><a href="#">
+                << Previous Page
+            </a></li>
+            <li><a href="#">
+                Next Page >>
+            </a></li>
+        </ul>
     {% endfor %}
 {% endblock %}
