--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -2,14 +2,12 @@
 
 <html>
     <head>
-        <title>Homepage</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700italic,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        {% block head %}
+        {% endblock %}
     </head>
-
-    
-
 
     <body class="container">
         <header>
