--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -2,20 +2,28 @@
 
 <html>
     <head>
-        <title> Homepage </title>
+        <title>Homepage</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700italic,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        {% block head %}
-        {% endblock %}
+        {% block head %}{% endblock %}
     </head>
+
+    
+
 
     <body class="container">
         <header>
             <ul id="share_links">
-                <li><a href="#">FB</a></li>
-                <li><a href="#">IG</a></li>
-                <li><a href="#">TW</a></li>
+                <li><a href="#">
+                    <img src="{% static '/images/fb.png' %}" alt="facebook">
+                </a></li>
+                <li><a href="#">
+                    <img src="{% static 'css/images/tw.png' %}" alt="facebook">
+                </a></li>
+                <li><a href="#">
+                    <img src="{% static 'css/images/ig.png' %}" alt="facebook">
+                </a></li>
             </ul>
             <h1 id="logo">
                 <a href="#">Emmett Moore</a>
