--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,51 +1,43 @@
 {% extends 'home/base.html' %}
 
 {% block head %}
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
+  <!--Load the AJAX API-->
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript">
 
-      // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart']});
+    // Load the Visualization API and the corechart package.
+    google.charts.load('current', {'packages':['corechart']});
 
-      // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
+    // Set a callback to run when the Google Visualization API is loaded.
+    google.charts.setOnLoadCallback(drawChart);
 
-      //data_choices = "{{ choice.choice_text }}"
-      //x = "{{ choice.choice_text.order_by }}"
-      var table = [];
-      table.push('x', 8)
+    var pollData = [];
+    {% for choice in question.choice_set.all %}
+    pollData.push(['{{ choice.choice_text }}', {{ choice.votes }}]);
+    {% endfor %}
+    //{% if not forloop.last %}, {% endif %})
 
-      	{% for choice in question.choice_set.all %}
-		    [{{ choice.choice_text }} , {{ choice.votes }}]
-		{% endfor %}
+    // Callback that creates and populates a data table,
+    // instantiates the pie chart, passes in the data and
+    // draws it.
+    function drawChart() {
 
+      // Create the data table.
+      var data = new google.visualization.DataTable();
+      data.addColumn('string', 'Topping');
+      data.addColumn('number', 'Slices');
+      data.addRows(pollData);
+     
+      // Set chart options
+      var options = {'title':'{{ question.question_text }}',
+                     'width':400,
+                     'height':300};
 
-	  //table.push("{{ choice.choice_text }}", {{ choice.votes }});-=
-
-      // Callback that creates and populates a data table,
-      // instantiates the pie chart, passes in the data and
-      // draws it.
-
-      function drawChart() {
-
-        // Create the data table.
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Vote Option');
-        data.addColumn('number', 'Votes');
-        data.addRows([table])
-
-        // Set chart options
-        var options = {'title':'Results',
-                       'width':800,
-                       'height':600};
-
-        // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-        chart.draw(data, options);
-        text(options);
-      }
-    </script>
-
+      // Instantiate and draw our chart, passing in some options.
+      var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+      chart.draw(data, options);
+    }
+  </script>
 {% endblock head %}
 
 {% block content %}
@@ -59,10 +51,6 @@
 		<ul>
 		{% for choice in question.choice_set.all %}
 		    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-		{% endfor %}
-
-		{% for choice in question.choice_set.all %}
-		    <li>[{{ choice.choice_text }} , {{ choice.votes }}]</li>
 		{% endfor %}
 		<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
 	</div>
