--- a/blog/templates/blog/post_specific.html
+++ b/blog/templates/blog/post_specific.html
@@ -1,19 +1,18 @@
 {% extends 'home/base.html' %}
 
 {% block content %}
-	<h1 class="title">
-    Emmetts Blog
+	<h1 class="title" align="center">
+    {{ post.title }}
     </h1>
     <div>
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
+        <p>{{ post.text|linebreaksbr }}</p>
         {% if post.published_date %} <!-- If it has a published date -->
             <div>
                 {{ post.published_date }}
             </div>
         {% endif %}
-        {% if user.is_authenticated %}
-        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
