--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -11,9 +11,13 @@ body {
 ul {
 	list-style-type: none;
 }
-a, a:hover, a:active {
+a, a:active {
 	color: black;
 	text-decoration: none;
+}
+
+a:hover {
+	color: rgb(28, 31, 29);
 }
 
 /* Header */
@@ -59,13 +63,8 @@ header {
 /*~~~~ FOOTER ~~~~*/
 footer {
 	height: 22px;
-	background-color: red;
-	margin-bottom: 20px;
-}
-
-footer #bar {
-	height: 22px;
-	background-color: red;
+	background-color: rgb(28, 31, 29);
+	margin-top: 20px;
 	margin-bottom: 20px;
 	width: 100%;
 }
@@ -76,11 +75,11 @@ footer #bar {
 }
 
 /*~~~~ BLOG POSTS ~~~~*/
-.new-post, #bar {
+.new-post {
 	margin: 0;
 	padding: 0;
 	height: 22px;
-	background-color: red;
+	background-color: rgb(28, 31, 29);
 }
 .new-post a {
 	padding-top: 2px;
@@ -113,33 +112,108 @@ footer #bar {
 	float: right;
 	clear: both;
 	padding: 5px;
-	background-color: black;
+	background-color: rgb(28, 31, 29);
 	color: white;
 	font-style: italic;
 	margin-top: 10px;
 }
+.read_more:hover {
+	color: #CCCCCC;
+}
 
 
-
-#page-number, #blog-navigation a {
+#blog-navigation {
+    display: table;
 	padding-top: 2px;
 	margin-left: 5px;
-	margin-right: 15px;
+	width: 100%;
 	color: white;
 	font-size: 12px;
 	font-style: italic;
 }
+
+#blog-navigation li {
+	display: inline-block;
+	width: 32.9%;
+}
+
 #page-number {
 	color: #b3b3b3;
 }
 
-#blog-navigation li {
-	display: inline-block;
+#prevpage {
+	text-align: left;
+	color: white;
+}
+
+#nextpage {
+	text-align: right;
+	color: white;
+	width: 100%;
 }
 
 .description {
 	font-style: italic;
 }
 
+#white {
+	color: white;
+}
 
 
+/*~~~~~ POLLS ~~~~~~*/
+
+.poll_list {
+	height: auto !important; /*Fills the box to the bottom*/
+	width: 50%;
+	border-radius: 15px;
+	/*border: 1px solid #F2F2F2;*/
+	border: 1px solid rgb(28, 31, 29);;
+	margin-top: 30px;
+	margin-bottom: 10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+    list-style-type: none; /*removes bullet points*/
+	text-align: center;
+}
+
+.new_poll_list {
+	padding-top: 10px;
+}
+
+.newest_questions {
+	margin-top: 30px;
+    font-size: 24;
+}
+
+.create_poll {
+	float: right;
+	clear: both;
+	padding: 5px;
+	background-color: rgb(28, 31, 29);
+	color: white;
+	font-style: italic;
+	margin-top: 10px;
+    position: absolute;
+    top: 65%;
+    left: 60%;
+    font-size: 30;
+}
+.create_poll:hover {
+	color: #CCCCCC;
+	text-decoration: none;
+}
+
+.results_left {
+	width: 50%;
+	padding-left: 30%;
+	float: left;
+}
+
+#chart_div {
+	margin-left: 50%;
+}
+
+#break_few_lines {
+	margin-top: 50px;
+}
