--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -26,7 +26,7 @@
                 </a></li>
             </ul>
             <h1 id="logo">
-                <a href="#">Emmett Moore</a>
+                <a href="/">Emmett Moore</a>
             </h1>
             <nav class="text-center">
                 <ul id="nav">
@@ -37,13 +37,23 @@
                 </ul>
             </nav>
         </header>
+        <h2 class="new-post">
+            {% if user.is_authenticated %}
+            <a>
+            </a>
+            {% else %}
+            <a href="/admin/">
+                Login
+            </a>
+            {% endif %}
+        </h2>
 
         {% block content %}
         {% endblock %}
 
         <footer>
-            <div id="bar"></div>
-            {% block bottom-nav %}{% endblock %}
+<!--             <div id="bar"></div>
+ -->            {% block bottom-nav %}{% endblock %}
         </footer>
 
     </body>
