attempting to add images

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -16,7 +16,7 @@
         <header>
             <ul id="share_links">
                 <li><a href="#">
-                    <img src="{% static '/images/fb.png' %}" alt="facebook">
+                    <img src="{% static 'css/images/fb.png' %}" alt="facebook">
                 </a></li>
                 <li><a href="#">
                     <img src="{% static 'css/images/tw.png' %}" alt="facebook">
