--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -7,6 +7,7 @@
 /*~~~~ UNIVERSAL ~~~~*/
 body {
 	font-family: 'Playfair Display', serif;
+	background-image: url("images/background.jpg");
 }
 ul {
 	list-style-type: none;
