--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -16,13 +16,13 @@
         <header>
             <ul id="share_links">
                 <li><a href="#">
-                    <img src="{% static 'css/images/fb.png' %}" alt="facebook">
+                    <img src="{% static 'css/img/fb.png' %}" alt="fb">
                 </a></li>
                 <li><a href="#">
-                    <img src="{% static 'css/images/tw.png' %}" alt="facebook">
+                    <img src="{% static 'css/img/tw.png' %}" alt="c">
                 </a></li>
                 <li><a href="#">
-                    <img src="{% static 'css/images/ig.png' %}" alt="facebook">
+                    <img src="{% static 'css/img/ig.png' %}" alt="s">
                 </a></li>
             </ul>
             <h1 id="logo">
