--- a/blog/templates/blog/post_specific.html
+++ b/blog/templates/blog/post_specific.html
@@ -8,7 +8,7 @@
         {% if user.is_authenticated %}
         <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
-        <p>{% autoescape off %} {{ post.text|linebreaksbr }} {% endautoescape %}</p>
+        <p>{% autoescape off %} {{ post.text }} {% endautoescape %}</p>
         {% if post.published_date %} <!-- If it has a published date -->
             <div>
                 {{ post.published_date }}
