--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700italic,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">   
-        <script src="{% static "js/jquery-3.1.0.min.js" %}"></script>
-        <script src="{% static "js/rango-jquery.js" %}"></script>
+        <script src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
+        <script src="{% static 'js/rango-jquery.js' %}"></script>
         {% block head %}{% endblock %}
     </head>
 
