--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,24 +4,21 @@
 	<div id="bar">
         </div>
 	<div class="row">
-		<div class="col-sm-6 col-sm-offset-3">
+		<div class="col-sm-7 col-sm-offset-3">
 			<h1 class="title text-center">
 		    Emmetts Home Page
 		    </h1>
 		    <p>
-		    Jean shorts tote bag chartreuse twee. Actually tacos kickstarter, flexitarian before they sold out banh mi chicharrones disrupt offal green juice roof party. Swag pitchfork seitan, forage retro next level kogi truffaut synth etsy church-key crucifix. Deep v pabst semiotics, farm-to-table PBR&B shoreditch health goth keytar mustache scenester. Tofu irony pour-over four loko, actually bicycle rights whatever jean shorts beard pabst. Intelligentsia umami disrupt, migas vinyl drinking vinegar plaid shabby chic selfies 8-bit pug schlitz fixie trust fund. Deep v shoreditch roof party, crucifix thundercats craft beer yr squid ugh franzen irony godard aesthetic.
+		    Welcome to my website. I am a student at the University of Liverpool, studying for a masters in Astrophysics.
+		    </p>
+		    <p>
+		    This is just a place for me to mess around with code and keep myself organised. The blog will be used as a place to keep information, be it for clarifying my understanding on topics from lectures, or simple walkthroughs for coding that I may want to revisit later. The links section has all the resources I use often.
+		    </p>
+		    <p>
+		    I may make apps from time to time. The first is the music grapher app, which barely works and I'm still updating.
 		    </p>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-sm-6 col-sm-offset-3">
-			<h1 class="title text-center">
-		    BlahBlah
-		    </h1>
-		    <p>
-		    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-		    </p>
-		</div>
 		    
 	</div>
 {% endblock %}
