--- a/blog/templates/blog/post_list_tag.html
+++ b/blog/templates/blog/post_list_tag.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 
-    {% for post in posts %}
+    {% for post in post_tag %}
         <article class="post row">
             <div class="col-sm-3 blog_post_info">
                 <h1 class="blog_post_title">
@@ -17,12 +17,9 @@
                         {{ post.title }}
                     </a>
                     </h1>
-
                 <a href="{% url 'post_specific' pk=post.pk %}" class="read_more text-uppercase">Read More</a>
-
-                <a href="{% url 'post_list_tag' kwarg=post.tag %}" class="date" > Tags: {{ post.tag }} </a>
-
-                <h2 class="date"> {{ post.published_date }} </h2>
+                <a href="{% url 'post_list_tag' kwarg=post.tag %}" class="date" > Tags: {{ post.tag }} </h2>
+                <h2 class="date"> {{ post.published_date }} </a>
             </div>
             <p class="col-sm-7">
                 {% autoescape off %} {{ post.text|linebreaksbr }} {% endautoescape %}
