blog index fix, bugfix on grapher

--- a/home/templates/home/links.html
+++ b/home/templates/home/links.html
@@ -106,6 +106,9 @@
 				<li>
 					<a href="http://www.goodtoknow.co.uk/recipes/497085/paul-hollywood-s-crusty-cob-loaf" target="_blank">Crusty Bread</a>
 				</li>
+				<li>
+					<a href="http://allrecipes.com/recipe/239867/chef-johns-chicken-tikka-masala/" target="_blank">Chicken Tikka Masala</a>
+				</li>
 			</ul>
 			<br>
 			<br>
