--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -24,9 +24,9 @@
 
                 <h2 class="date"> {{ post.published_date }} </h2>
             </div>
-            <p class="col-sm-7">
+            <div class="col-sm-7">
                 {% autoescape off %} {{ post.text|linebreaksbr }} {% endautoescape %}
-            </p>
+            </div>
             <div class="col-sm-2 text-sm-left blog_post_info">
             </div>
         </article>
