--- a/music_grapher/templates/music_grapher/graph.html
+++ b/music_grapher/templates/music_grapher/graph.html
@@ -7,20 +7,6 @@
 <script type="text/javascript">
 $(function () {
     $('#container').highcharts({
-
-
-/*    	function pointClick() {
-                var row = this.options.row,
-                    $div = $('<div></div>')
-                        .dialog({
-                            title: this.name,
-                            width: 400,
-                            height: 300
-                        });
-
-                    }*/
-
-
         xAxis: {
         	title: {
         		text: 'Year'
@@ -70,8 +56,8 @@ $(function () {
 
 	    <h1 class="title text-center" >
 	    {{ bandname }}
-	    </h1><!-- 
-	    <p>
+	    </h1> 
+<!-- 	    <p>
 	    {{ albumname }}
 	    </p>
 	    <p>
@@ -90,33 +76,12 @@ $(function () {
 	    <p>
 	    data: {{ data }},
 	    </p> -->
-	    <div id="container" style="width:100%; height:400px;"></div>
+	    <div id="container" style="width:100%; height:400px;"></div>	
+	    <br>
+	    <br>    
+	    <form method="POST" class="post-form" align="center">{% csrf_token %}
+	        {{ Bform.as_p }}
+	        <button type="submit" class="save btn btn-default">Submit</button>
+	    </form>
 	</div>
 {% endblock %}
-
-<!-- 
-	    <canvas id="countries" width="600" height="400"></canvas>
-	        <script>
-		        var pieData = [
-		            {
-		                value: 20,
-		                color:"#878BB6"
-		            },
-		            {
-		                value : 40,
-		                color : "#4ACAB4"
-		            },
-		            {
-		                value : 10,
-		                color : "#FF8153"
-		            },
-		            {
-		                value : 30,
-		                color : "#FFEA88"
-		            }
-		        ];
-		        
-		        var countries= document.getElementById("countries").getContext("2d");
-		        new Chart(countries).Pie(pieData);
-		    </script>
- -->
