--- a/home/templates/home/links.html
+++ b/home/templates/home/links.html
@@ -109,6 +109,10 @@
 				<li>
 					<a href="http://allrecipes.com/recipe/239867/chef-johns-chicken-tikka-masala/" target="_blank">Chicken Tikka Masala</a>
 				</li>
+				<li>
+					<a href="https://www.theguardian.com/lifeandstyle/wordofmouth/2011/jan/13/how-make-perfect-chicken-soup
+" target="_blank">Chicken Soup</a>
+				</li>
 			</ul>
 			<br>
 			<br>
