--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <title>Homepage</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700italic,400italic' rel='stylesheet' type='text/css'>
@@ -17,51 +19,49 @@
 
     <body class="container">
         <header>
-            <ul id="share_links">
-                <li><a href="https://github.com/emmetttt" target="_blank">
-                    <img src="https://github.com/favicon.ico" alt="github">
-                </a></li>
-                <li><a href="https://www.facebook.com/emmett.moore.923" target="_blank">
-                    <img src="{% static 'css/img/fb.png' %}" alt="fb">
-                </a></li>
-<!--                 <li><a href="#">
-                    <img src="{% static 'css/img/tw.png' %}" alt="c">
-                </a></li>
-                <li><a href="#">
-                    <img src="{% static 'css/img/ig.png' %}" alt="s">
-                </a></li> -->
-            </ul>
-            <h1 id="logo">
-                <a href="/">Emmett Moore</a>
-            </h1>
-            <nav class="text-center">
-                <ul id="nav">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/blog/">Blog</a></li>
-                    <li><a href="home/links/">Links</a></li>
-                    <li><a href="/music_grapher/">Music Grapher</a></li>
-                    <li><a href="/">About</a></li>
+            <div class="col-sm-10 col-sm-offset-1">
+                <ul id="share_links">
+                    <li><a href="https://github.com/emmetttt" target="_blank">
+                        <img src="https://github.com/favicon.ico" alt="github">
+                    </a></li>
+                    <li><a href="https://www.facebook.com/emmett.moore.923" target="_blank">
+                        <img src="{% static 'css/img/fb.png' %}" alt="fb">
+                    </a></li>
                 </ul>
-            </nav>
+                <h1 id="logo">
+                    <a href="/">Emmett Moore</a>
+                </h1>
+                <ul id="nav">
+                    <li class="col-lg-2 text-center"><a href="/">Home</a></li>
+                    <li class="col-lg-2 text-center"><a href="/blog/">Blog</a></li>
+                    <li class="col-lg-2 full-width text-center"><a href="/music_grapher/">Music Grapher</a></li>
+                    <li class="col-lg-2 text-center"><a href="/home/links/">Links</a></li>
+                    <li class="col-lg-2 text-center"><a href="/home/maths/">Maths</a></li>
+                    <li class="col-lg-2 text-center"><a href="/">About</a></li>
+                </ul>
+            </div>
         </header>
-        <h2 class="nav-bar">
-            {% if user.is_authenticated %}
-            {% block topbar %}
+
+
+        <div class="col-sm-10 col-sm-offset-1">
+            <h2 class="nav-bar"> <!-- The black bar is in the CSS -->
+                {% if user.is_authenticated %}
+                {% block topbar %}
+                {% endblock %}
+                {% else %}
+                <a class="nav-bar-text" href="/admin/">
+                    Login
+                </a>
+                {% endif %}
+            </h2>
+
+            {% block content %}
             {% endblock %}
-            {% else %}
-            <a class="nav-bar-text" href="/admin/">
-                Login
-            </a>
-            {% endif %}
-        </h2>
 
-        {% block content %}
-        {% endblock %}
-
-        <footer>
-            {% block bottom-nav %}{% endblock %}
-        </footer>
-
+            <footer>
+                {% block bottom-nav %}{% endblock %}
+            </footer>
+        </div>
     </body>
 
 </html>
